--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -4,6 +4,9 @@ blinker==1.7.0
 click==8.1.7
 colorama==0.4.6
 Flask==3.0.2
+Flask-Cors==4.0.0
+Flask-Mail==0.9.1
+flask-marshmallow==1.2.1
 Flask-Migrate==4.0.7
 Flask-RESTful==0.3.10
 Flask-SQLAlchemy==3.1.1
@@ -12,6 +15,9 @@ itsdangerous==2.1.2
 Jinja2==3.1.3
 Mako==1.3.2
 MarkupSafe==2.1.5
+marshmallow==3.21.1
+packaging==24.0
+psycopg2==2.9.9
 python-dotenv==1.0.1
 pytz==2024.1
 six==1.16.0
