--- a/server/.env.example
+++ b/server/.env.example
@@ -1,12 +1,31 @@
-#: Determines whether Flask is in DEBUG mode. 
-#: Sets False in production deployment. When set to False, debug mode is disabled.
-FLASK_DEBUG=True
-
-#: Specifies the entry point file for the Flask application.
+## Specifies the entry point file for the Flask application.
 FLASK_APP=app.py
 
-#: Sets the environment in which the Flask application runs.
+## Determines whether Flask is in DEBUG mode. 
+#: Sets False in production deployment. 
+#: When set to False, debug mode is disabled.
+FLASK_DEBUG=True
+
+## Sets the environment in which the Flask application runs.
+#: for production deployment set to 'production'.
+#: for testing environment set to 'testing'.
 FLASK_ENV=development
 
-#: Secret key for Flask session management. It should be kept secret.
+## Secret key for Flask session management. It should be kept secret.
+#: Set to a long, randomly generated string to enhance security.
+#: Be sure to set this environment variable.
 SECRET_KEY=
+
+## Set these PostgreSQL database environment variable for configure DB.
+#: set your database engine. In this case PostgreSQL.
+DATABASE_ENGINE=postgresql
+#: set your database name.
+DATABASE_NAME=
+#: set your database username.
+DATABASE_USERNAME=
+#: set your database password.
+DATABASE_PASSWORD=
+#: set your database host.
+DATABASE_HOST=
+#: set your database post.
+DATABASE_PORT=
